--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-*{
-    margin:0;
+body{
+    background-color: aliceblue;
+}
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+p{
+    width: 500px;
+    height: 250xp;
+    border: 3px solid red;
+    background-color:rgba(255, 255, 0, 0.468) ;
+}
+span{
+    border-color: blue;
+    border-style: solid;
+
 }
